# DIP

./: CInterface.cpp  CInterface.h  CMakeLists.txt  Const.h  Cool.cpp  Cool.h  CoolCInterface.cpp  CoolCInterface.h  CoolConst.h  CoolCool.cpp  CoolCool.h  CoolMLI.h  CoolManager.cpp  CoolManager.h  CoolPoint.h  CoolSimplex.cpp  CoolSimplex.h  CoolTest.cpp  CoolTest.h  PSI.cpp  PSI.h  PSIBallTree.h  PSImain.cpp  Point.h  README.md  Simplex.cpp  Simplex.h  cool.cpp  cool.h  example1.c  example2.cpp  main.c  main.cpp  main.h  main_old.c  main_old.h  makefile
data2d/: data.csv  dneighbours.csv  dtri.csv
data3d/: data.csv  dneighbours.csv  dtri.csv
data4d/: data.csv  logfile
slice3d/: mapfile  z0.0.neighbors  z0.0.points  z0.0.tris  z0.1.neighbors  z0.1.points  z0.1.tris  z0.2.neighbors  z0.2.points  z0.2.tris  z0.3.neighbors  z0.3.points  z0.3.tris  z0.4.neighbors  z0.4.points  z0.4.tris  z0.5.neighbors  z0.5.points  z0.5.tris  z0.6.neighbors  z0.6.points  z0.6.tris  z0.7.neighbors  z0.7.points  z0.7.tris  z0.8.neighbors  z0.8.points  z0.8.tris  z0.9.neighbors  z0.9.points  z0.9.tris  z1.0.neighbors  z1.0.points  z1.0.tris  z1.1.neighbors  z1.1.points  z1.1.tris  z1.2.neighbors  z1.2.points  z1.2.tris  (+84 more)
